<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    tools:context=".TestActivity">

    <FrameLayout

        android:id="@+id/frame"
        android:background="@color/btn_color"
        android:layout_width="350dp"
        android:layout_height="210dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/TestTextView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/test"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/frame"
            app:layout_constraintStart_toStartOf="@+id/frame"
            app:layout_constraintTop_toTopOf="@+id/frame" />

        <EditText
            android:id="@+id/answerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:ems="10"
            android:hint="@string/enteranswer"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHighlight="@color/mainBlue"
            android:textColorLink="@color/mainBlue" />

    </FrameLayout>



    <Button
        android:id="@+id/btnNextQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickNextButton"
        android:text="@string/next"
        android:textColor="@color/mainBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@color/btn_color"
        android:backgroundTint="@color/btn_color"
        android:clickable="true"
        android:onClick="onClickTryAgainBtn"
        android:roundIcon="@mipmap/ic_launcher_round"
        android:src="@drawable/try_again_btn"
        android:visibility="visible"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame"
        app:layout_constraintVertical_bias="0.3"
        app:maxImageSize="40dp"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>
